web/app/themes/vestedworld/assets/styles/pages/_about.scss
// About Page

.page.about-us {

  .section-title {
    top: 0;
    z-index: 1;
    height: 25px;
    color: $white;
    padding: 0 10px;
    position: absolute;
    font-weight: normal;
    @include small-caps();
    line-height: 25px;
    background: $brand-primary;
    left: $mobile-global-padding;
    @include media-md {
      left: 0;
      top: #{$vertical-beat * 8};
      transform-origin: top left;
      transform: rotate(-90deg) translateX(-100%);
    }
  }

  .about-section {
    position: relative;
    @include clearfix();

    .image-wrap {
      height: 200px;
      overflow: hidden;
      position: relative;
      img {
        top: 50%;
        left: 50%;
        width: auto;
        height: 400px;
        max-width: none;
        position: absolute;
        backface-visibility: hidden;
        transition: transform 0s linear;
        transform: translate3d(-50%, -70%, 0);
      }

      @include media-md {
        height: 392px;
        img {
          height: auto;
          min-width: 100%;
          min-height: 900px;
        }
      }
    }

    .content {
      z-index: 1;
      position: relative;
      background: $white;
      padding: 48px $mobile-global-padding 96px;
      @include media-md {
        padding: 48px $global-padding 96px;
        &::before {
          left: 0;
          height: 1px;
          width: 25px;
          content: '';
          bottom: 120px;
          position: absolute;
          background: $gray-dark;
        }
      }
    }

    .summary {
      h2 {
        @extend .h1;
        color: $brand-primary;
      }
      p {
        @extend .h2;
      }
    }

    .body {
      margin-top: 6px;
      padding-top: $vertical-beat * 2;
      border-top: 1px solid $gray-dark;
      h3 {
        color: $brand-primary;
      }
      p {
        font-size: 16px;
        margin: 0 0 1.5em;
        line-height: 1.5em;
      }
    }

    @include media-md {
      .summary {
        @include column(12);
        padding-right: $column-width;
      }
      .body {
        @include column(11);
        padding-right: $column-width;
      }
    }
  }

  .people-sections {
    position: relative;
  }

  // About us section
  #about-us.about-section {
    h1 {
      background: $white;
      color: $brand-primary;
    }

    .content {
      color: $white;
      background: $brand-primary;
      &::before {
        background: $white;
      }
      p {
        @extend %smooth;
      }
    }

    .summary h2 {
      color: $white;
    }

    .body {
      border-color: $white;
    }
  }

  section {
    margin-top: 60px;
    background: $white;
  }
}

// Team grid
.people {
  padding: #{$vertical-beat * 8} $mobile-global-padding;
  @include media-md {
    padding: #{$vertical-beat * 8} $global-padding;
  }
  .people-grid {
    margin: 0;
    padding: 0;
    @include clearfix();
    @include media-md {
      display: flex;
      flex-wrap: wrap;
    }
  }
  .person {
    h1 {
      @extend .h2;
    }
    .bio {
      display: none;
    }
  }
}

.person-data {
  h1 {
    margin-bottom: .25em;
    color: $brand-primary;
  }
  h2 {
    margin: 0;
    @include small-caps();
    line-height: 1.5em;
  }
  .person-image {
    img {
      vertical-align: top;
    }
  }
}

// Management grid
.people.management {

  @include media-md {
    &::before {
      left: 0;
      height: 1px;
      width: 25px;
      content: '';
      bottom: #{$vertical-beat * 8};
      position: absolute;
      background: $gray-dark;
    }
  }

  .person {
    width: 100%;
    padding-right: $column-width;
    border-top: 1px solid $gray-dark;
    &:first-of-type {
      border-top: none;
    }
    .-left {
      width: 100%;
      @include media-md {
        display: flex;
        > div {
          max-width: 50%;
          flex-basis: 50%;
        }
      }
    }
    .person-inner {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      @include media-md {
        flex-direction: row;
      }
    }
    .person-text {
      order: 1;
      min-width: 150px;
      position: relative;
      padding: 30px 0 80px;
      @include media-md {
        order: 0;
      }
    }
    .callout {
      display: none;
    }
    .quote {
      @extend .h2;
      padding: 30px 0;
      color: $brand-primary;
      @include media-md {
        padding-left: 30px;
      }
    }
    button {
      left: 0;
      bottom: 30px;
      position: absolute;
    }
    .person-image {
      order: 0;
      width: 100%;
      text-align: left;
      padding-top: 30px;
      align-self: flex-end;
      @include media-md {
        order: 1;
        width: auto;
        padding-top: 0;
        text-align: right;
        img {
          max-height: none;
        }
      }
    }
  }
  .people-grid {
    border-top: 1px solid $gray-dark;
    border-bottom: 1px solid $gray-dark;
  }
}

// Advisory Board grid
.people.board {
  .people-grid {
    padding-top: 30px;
    border-top: 1px solid $gray-dark;
  }
  > p {
    @extend .h2;
    margin-top: 0;
    color: $brand-primary;
    @include media-md {
      width: 50%;
    }
  }
  .person {
    height: 0;
    overflow: hidden;
    min-height: 200px;
    position: relative;
    outline: 1px solid $white;
    padding: 0 30px 71.4285714%;
    @include media-md {
      max-width: 50%;
      flex-basis: 50%;
      padding: 0 30px 35.7142857%;
    }
    @include media-lg {
      max-width: 100% * 1 / 3;
      flex-basis: 100% * 1 / 3;
      padding: 0 30px 23.809523776%;
    }

    &:hover,
    &:focus {
      .person-image::before {
        opacity: 0;
      }
    }

    .person-image {
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      z-index: 0;
      position: absolute;
      &::before {
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        z-index: 1;
        content: '';
        position: absolute;
        transition: opacity .35s ease-out;
        background: rgba($blue-dark, .75);
      }
      .person-image-inner {
        height: 100%;
        position: relative;
      }
      img {
        left: 50%;
        width: auto;
        max-width: none;
        min-width: 100%;
        min-height: 100%;
        position: relative;
        transform: translateX(-50%);
      }
    }

    h1 {
      color: $white;
      margin-top: 30px;
      position: relative;
    }

    .person-activate {
      left: 30px;
      bottom: 30px;
      position: absolute;
    }
  }
}

// Active Person Container
.active-person-container {
  z-index: 10;
  display: none;
  position: absolute;
  background: $white;
  margin-right: $mobile-global-padding;
  @include media-md {
    margin-right: $column-width;
  }
  &.-active {
    display: block;
  }

  .person-activate {
    display: none;
  }
  .person-deactivate {
    top: -7px;
    padding-left: 7px;
    position: absolute;
    height: $mobile-global-padding;
    width: $mobile-global-padding;
    right: -$mobile-global-padding;
    @include media-md {
      transform: translateX(50%);
      right: -#{$column-width / 2};
    }
  }

  // If .solo, no need for nav
  &.solo .post-nav {
    display: none;
  }

  .post-nav {
    top: 0;
    bottom: 0;
    position: absolute;
    width: $mobile-global-padding;
    right: -$mobile-global-padding;
    > div {
      left: 50%;
      color: $white;
      cursor: pointer;
      position: absolute;
      white-space: nowrap;
      @include small-caps();
      transform-origin: top left;
      transform: rotate(-90deg) translateY(-50%);
      &.previous-person {
        top: 196px;
      }
      &.next-person {
        bottom: 0;
      }
    }

    @include media-md {
      width: $column-width;
      right: -$column-width;
    }
  }
  .person-data {
    @include media-md {
      display: flex;
    }

    &.management {
      .person-inner {
        background: $white;
      }
      .-left {
        background: $brand-primary;
      }
    }

    // State change animations
    &.exitRight {
      .callout-inner,
      .person-text h1,
      .person-text h2 {
        animation: exitRight .5s forwards;
      }
      .bio-inner .user-content {
        animation: exitRight .5s forwards .1s;
      }
    }
    &.exitLeft {
      .callout-inner,
      .person-text h1,
      .person-text h2 {
        animation: exitLeft .5s forwards;
      }
      .bio-inner .user-content {
        animation: exitLeft .5s forwards .1s;
      }
    }
    &.enterRight {
      .callout-inner,
      .person-text h1,
      .person-text h2 {
        opacity: 0;
        animation: enterRight $cubic-ease1 .6s forwards .1s;
      }
      .bio-inner .user-content {
        opacity: 0;
        animation: enterRight $cubic-ease1 .6s forwards .25s; 
      }
      .person-image-inner {
        animation: zoomInFade .5s forwards;
      }
    }
    &.enterLeft {
      .callout-inner,
      .person-text h1,
      .person-text h2 {
        opacity: 0;
        animation: enterLeft $cubic-ease1 .6s forwards .1s;
      }
      .bio-inner .user-content {
        opacity: 0;
        animation: enterLeft $cubic-ease1 .6s forwards .25s; 
      }
      .person-image-inner {
        animation: zoomInFade .5s forwards;
      }
    }
  }
  .-left,
  .bio {
    @include media-md {
      max-width: 50%;
      flex-basis: 50%;
    }
  }
  .person-inner,
  .quote {
    overflow: hidden;
    padding: #{$vertical-beat * 8} #{$column-width * 2} 0;
  }
  .callout {
    @extend .h1;
    color: $white;
    font-size: 24px;
    line-height: 1.333333333em;
    background: $brand-primary;
    padding: #{$vertical-beat * 8} $mobile-global-padding;
    @include media-md {
      font-size: 48px;
      line-height: 48px;
      padding: #{$vertical-beat * 8} $global-padding;
    }
  }
  .quote {
    display: none;
  }
  .person-text header {
    overflow: hidden;
  }
  .bio {
    overflow: hidden;
    position: relative;
    background: $gray-lite;
    padding: #{$vertical-beat * 8} $mobile-global-padding;
    p:first-of-type {
      margin-top: 0;
    }
    @include media-md {
      padding: #{$vertical-beat * 8} $global-padding;
    }
  }
  .bio-inner {
    overflow: hidden;
  }

   // Board Member mods
  .board {
    .person {
      outline: none;
    }
    .person-inner {
      padding: 0;
    }
    .person-image {
      height: 0;
      width: 100%;
      overflow: hidden;
      position: relative;
      background: $blue-dark;
      padding-bottom: 56.8181818%;
      .person-image-inner {
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        z-index: 0;
        height: auto;
        position: absolute;
      }
      img {
      top: 50%;
      left: 50%;
      z-index: 0;
      width: 100%;
      height: auto;
      min-width: 100%;
      min-height: 100%;
      position: absolute;
      transform: translate(-50%, -50%);
      }
    }
    .person-text {
      padding: #{$vertical-beat * 4} $mobile-global-padding;
      @include media-md {
        padding: #{$vertical-beat * 8} $global-padding;
      }
      h1 {
        margin: 0;
        @extend .h2;
      }
    }
  }
}

